# Numerical-Method

./: .buildinfo  .gitignore  BUILD.html  GITHUB_PAGES_SETUP.md  README copy.md  README.md  TROUBLESHOOTING.md  calculator.py  calculus.ipynb  ch1.html  ch2.html  ch2.md  ch3.html  ch4.html  coriolis_acc copy 2.ipynb  coriolis_acc copy.ipynb  coriolis_acc.ipynb  demo.py  genindex.html  index.html  lab.py  lab4.py  lab5.py  lab7.py  lab8.py  lab9.py  lec2-5.py  lec3-2.py  lec3.py  manim.ipynb  nr.ipynb  objects.inv  pyproject copy.toml  pyproject.toml  requirements.txt  root.py  root_locus.asy  root_locus.eps  root_locus.py  search.html  (+2 more)
.doctrees/: BUILD.doctree  ch1.doctree  ch2.doctree  ch3.doctree  ch4.doctree  environment.pickle  index.doctree
.github/workflows/: docs.yml
_sources/: ch1.md.txt  ch2.md.txt  ch3.md.txt
_static/: basic.css  custom.css
backup/: ch1 copy.md  ch2 copy.md
docs/: BUILD.md  ch1.md  ch2.md  ch3.md  chapter1.md  chapter2.md  chapter3.md  conf.py  index.md  requirements.txt
docs/_static/: custom.css
lab1/: task2.ipynb  task2.py  tempCodeRunnerFile.py
lab2/: task1.py
notebooks/: calculus.ipynb  ch1-roots.ipynb  ch2-linear-systems.ipynb  ch3-interpolation.ipynb
src/numerical_methods/: lec2-1.py  lec2-4.py  numerical_test.py
src/numerical_methods/intro/: lec2-2.py  lec2.py
src/numerical_methods/lab/: bisect.ipynb  bisection.py  gep.py  lab10.py  lab11.py  lab4-2py  lab6.py  lab9.ipynb  nr.ipynb  nr.py
src/numerical_methods/solvers/: laplace-eqn.ipynb  laplace_en.ipynb  newton_raphson.py  poisson_en.ipynb  (+1 more)
tests/: NR.py
